--- a/catalog/view/theme/default/template/common/header.twig
+++ b/catalog/view/theme/default/template/common/header.twig
@@ -10,6 +10,7 @@
       var js_site_from = 'www';
   </script>
   <link media="all" href="catalog/view/theme/default/css/index.css" type="text/css" rel="stylesheet">
+  <link media="all" href="catalog/view/theme/default/css/home.css" type="text/css" rel="stylesheet">
 </head>
 <body>
 
@@ -618,8 +619,8 @@
             </div>
             <div class="nav-img j-nav-right">
               <div class="item j-nav-img-item"><a class="img-a" href="http://www.shein.com/global-bestseller-shoes-y-vc-41520.html?icn=bestsellershoes&amp;ici=www_navbar06banner01"><img src="catalog/view/theme/default/image/index/15129728932791511355.jpg" alt="Bestseller"></a><div class="btm-wrap"><span class="btm-strong">Bestseller</span></div><div class="btm-wrap"><span class="btm"></span></div></div>
-              <div class="item j-nav-img-item"><a class="img-a" href="http://www.shein.com/boots-c-1748.html?icn=boots&amp;ici=www_navbar06banner02"><img src="catalog/view/theme/default/image/index/15117470639943200747.jpg" alt="Boots"></a><div class="btm-wrap"><span class="btm-strong">Boots</span></div><div class="btm-wrap"><span class="btm"></span></div></div>
-              <div class="item j-nav-img-item"><a class="img-a" href="http://www.shein.com/flats-c-1881.html?icn=flats&amp;ici=www_navbar06banner03"><img src="catalog/view/theme/default/image/index/15129718373750007038.jpg" alt="Flat"></a><div class="btm-wrap"><span class="btm-strong">Flat</span></div><div class="btm-wrap"><span class="btm"></span></div></div>
+              <div class="item j-nav-img-item"><a class="img-a" href="http://www.shein.com/boots-c-1748.html?icn=boots&amp;ici=www_navbar06banner02"><img src="/catalog/view/theme/default/image/index/15117470639943200747.jpg" alt="Boots"></a><div class="btm-wrap"><span class="btm-strong">Boots</span></div><div class="btm-wrap"><span class="btm"></span></div></div>
+              <div class="item j-nav-img-item"><a class="img-a" href="http://www.shein.com/flats-c-1881.html?icn=flats&amp;ici=www_navbar06banner03"><img src="/catalog/view/theme/default/image/index/15129718373750007038.jpg" alt="Flat"></a><div class="btm-wrap"><span class="btm-strong">Flat</span></div><div class="btm-wrap"><span class="btm"></span></div></div>
             </div>
           </div>
         </div>
@@ -800,8 +801,6 @@
 </script>
 
 
-
-
 <script type="text/javascript">
 
     $("#logo_rightyy").mouseenter(function(){
@@ -835,8 +834,5 @@
 
 </script>
 
-
-</body>
-</html>
 
 {#{{ menu }}#}
