--- a/catalog/view/theme/default/template/common/header.twig
+++ b/catalog/view/theme/default/template/common/header.twig
@@ -11,6 +11,8 @@
   </script>
   <link media="all" href="catalog/view/theme/default/css/index.css" type="text/css" rel="stylesheet">
   <link media="all" href="catalog/view/theme/default/css/home.css" type="text/css" rel="stylesheet">
+  <link media="all" href="catalog/view/theme/default/css/login.css" type="text/css" rel="stylesheet">
+  <link media="all" href="catalog/view/theme/default/css/forget.css" type="text/css" rel="stylesheet">
 </head>
 <body>
 
