--- a/catalog/view/theme/default/template/account/forgotten.twig
+++ b/catalog/view/theme/default/template/account/forgotten.twig
@@ -1,38 +1,23 @@
 {{ header }}
-<div id="account-forgotten" class="container">
-  {{ include(helper.template('_partial/breadcrumb')) }}
-  {% if error_warning %}
-  <div class="alert alert-danger alert-dismissible"><i class="fa fa-exclamation-circle"></i> {{ error_warning }}</div>
-  {% endif %}
-  <div class="row">{{ column_left }}
-    {% if column_left and column_right %}
-    {% set class = 'col-sm-6' %}
-    {% elseif column_left or column_right %}
-    {% set class = 'col-sm-9' %}
-    {% else %}
-    {% set class = 'col-sm-12' %}
-    {% endif %}
-    <div id="content" class="{{ class }}">{{ content_top }}
-      <h1>{{ heading_title }}</h1>
-      <p>{{ text_email }}</p>
-      <form action="{{ action }}" method="post" enctype="multipart/form-data" class="form-horizontal">
-        <fieldset>
-          <legend>{{ text_your_email }}</legend>
-          <div class="form-group required">
-            <label class="col-sm-2 control-label" for="input-email">{{ entry_email }}</label>
-            <div class="col-sm-10">
-              <input type="text" name="email" value="{{ email }}" placeholder="{{ entry_email }}" id="input-email" class="form-control" />
-            </div>
-          </div>
-        </fieldset>
-        <div class="buttons clearfix">
-          <div class="pull-right">
-            <input type="submit" value="{{ button_submit }}" class="btn btn-primary" />
-          </div>
-          <div class="pull-left"><a href="{{ back }}" class="btn btn-default">{{ button_back }}</a></div>
+<div class="container forget-password">
+  <div class="forget-password-con">
+    <div class="operate-hint">
+      <h2>Forgotten Password</h2>
+      <p class="forget-top-title">If you’ve forgotten your password, please enter your registered email address. <br />We’ll send you a link to reset your password. </p>
+    </div>
+    <div class="input-email-bg">
+      <form action="javascript:;" name="theForm" method="post">
+        <div class="forget-input-bg forget_verify">
+          <input name="email" id="email" class="forget-email-input" value="" type="text" />
+          <input class="forget_submit she-btn she-btn-sm-prim" value="Continue" onclick="check_form();" type="button" />
+          <img src="loading_vc554483.gif" class="forget_waiting" />
+          <p id="tip" class="forget_error_title" style="color: rgb(255, 0, 0);"></p>
+        </div>
+        <div class="forget-input-bg forget_verify_success">
+          <p id="verify_success_title" class="forget_success_title" style="color: rgb(255, 0, 0);"></p>
         </div>
       </form>
-      {{ content_bottom }}</div>
-    {{ column_right }}</div>
+    </div>
+  </div>
 </div>
 {{ footer }}
