--- a/catalog/view/theme/default/template/account/login.twig
+++ b/catalog/view/theme/default/template/account/login.twig
@@ -11,7 +11,7 @@
         <div class="sign-in-detail">
           <p class="login-prompt" id="login_error"></p>
           <div class="list-input">
-            <form name="theForm" method="post" onsubmit="return check_form();" class="j-login-form" action="file:///E:/%E7%AB%99%E7%82%B9/login/index.html">
+            <form name="theForm" method="post" class="j-login-form" action="">
               <div class="list-item">
                 <div class="item-title">
                   <span class="undone">Email Address:</span>
