--- a/catalog/view/theme/default/template/common/header.twig
+++ b/catalog/view/theme/default/template/common/header.twig
@@ -13,6 +13,9 @@
   <link media="all" href="catalog/view/theme/default/css/home.css" type="text/css" rel="stylesheet">
   <link media="all" href="catalog/view/theme/default/css/login.css" type="text/css" rel="stylesheet">
   <link media="all" href="catalog/view/theme/default/css/forget.css" type="text/css" rel="stylesheet">
+  <link media="all" href="catalog/view/theme/default/css/detail.css" type="text/css" rel="stylesheet">
+  <link media="all" href="catalog/view/theme/default/css/cart.css" type="text/css" rel="stylesheet">
+  <link media="all" href="catalog/view/theme/default/css/cart_empty.css" type="text/css" rel="stylesheet">
 </head>
 <body>
 
