--- a/catalog/view/theme/default/template/common/header.twig
+++ b/catalog/view/theme/default/template/common/header.twig
@@ -13,6 +13,10 @@
   <link media="all" href="catalog/view/theme/default/css/home.css" type="text/css" rel="stylesheet">
   <link media="all" href="catalog/view/theme/default/css/login.css" type="text/css" rel="stylesheet">
   <link media="all" href="catalog/view/theme/default/css/forget.css" type="text/css" rel="stylesheet">
+  <link media="all" href="catalog/view/theme/default/css/account.css" type="text/css" rel="stylesheet">
+  <link media="all" href="catalog/view/theme/default/css/password.css" type="text/css" rel="stylesheet">
+  <link media="all" href="catalog/view/theme/default/css/myorder.css" type="text/css" rel="stylesheet">
+  <link media="all" href="catalog/view/theme/default/css/address.css" type="text/css" rel="stylesheet">
 </head>
 <body>
 
