--- a/catalog/view/theme/default/template/account/password.twig
+++ b/catalog/view/theme/default/template/account/password.twig
@@ -1,45 +1,76 @@
 {{ header }}
-<div id="account-password" class="container">
-  {{ include(helper.template('_partial/breadcrumb')) }}
-  <div class="row">{{ column_left }}
-    {% if column_left and column_right %}
-    {% set class = 'col-sm-6' %}
-    {% elseif column_left or column_right %}
-    {% set class = 'col-sm-9' %}
-    {% else %}
-    {% set class = 'col-sm-12' %}
-    {% endif %}
-    <div id="content" class="{{ class }}">{{ content_top }}
-      <h1>{{ heading_title }}</h1>
-      <form action="{{ action }}" method="post" enctype="multipart/form-data" class="form-horizontal">
-        <fieldset>
-          <div class="form-group required">
-            <label class="col-sm-2 control-label" for="input-password">{{ entry_password }}</label>
-            <div class="col-sm-10">
-              <input type="password" name="password" value="{{ password }}" placeholder="{{ entry_password }}" id="input-password" class="form-control" />
-              {% if error_password %}
-              <div class="text-danger">{{ error_password }}</div>
-              {% endif %}
-            </div>
+<div class="she-my-wrap container">
+  <ol class="position she-breadcrumb">
+    <li>
+      <a href="">
+        Home
+      </a>
+    </li>
+    <li>
+      <span class="selected">
+          My ACCOUNT
+      </span>
+    </li>
+  </ol>
+  <div class="row">
+      {{ column_left }}
+    <div class="she-center col-sm-9 col-xs-12 per-setting">
+
+      <h3 class="she-tl-h3">Edit Password</h3>
+
+      <div class="she-center-editpass">
+        <form class="formlist list-input" action="https://www.shein.com/index.php?model=account_setting&amp;action=password#" name="theForm" method="post" onsubmit="return check_form();">
+          <p>If  you want to change your password, you can edit it here.</p>
+          <div class="form-group" style="margin-bottom: 40px; margin-top: 0px;">
+            <label style="margin-top: 48px;">Old Password:
+              <font color="#FF0000">*</font>
+            </label>
+            <input class="form-control" name="old_password" size="21" maxlength="40" id="old_password" type="password">
+
           </div>
-          <div class="form-group required">
-            <label class="col-sm-2 control-label" for="input-confirm">{{ entry_confirm }}</label>
-            <div class="col-sm-10">
-              <input type="password" name="confirm" value="{{ confirm }}" placeholder="{{ entry_confirm }}" id="input-confirm" class="form-control" />
-              {% if error_confirm %}
-              <div class="text-danger">{{ error_confirm }}</div>
-              {% endif %}
-            </div>
+          <div class="form-group" style="margin-top: 0px; margin-bottom: 0px;">
+            <label style="margin-top: 0px;">New Password:
+
+              <font color="#FF0000">*</font>
+            </label>
+            <input class="form-control" placeholder="" name="password" size="21" maxlength="40" id="password" onkeyup="this.value=this.value.replace(/\s+/g,'')" type="password">
+
           </div>
-        </fieldset>
-        <div class="buttons clearfix">
-          <div class="pull-right">
-            <input type="submit" value="{{ button_submit }}" class="btn btn-primary" />
+          <div class="form-group" style="margin-top: 0px; margin-bottom: 0px;">
+            <label style="margin-top: 20px;">Confirm Password:
+
+              <font color="#FF0000">*</font>
+            </label>
+            <input class="form-control" placeholder="" name="password1" size="21" maxlength="40" id="password1" onkeyup="this.value=this.value.replace(/\s+/g,'')" type="password">
           </div>
-          <div class="pull-left"><a href="{{ back }}" class="btn btn-default">{{ button_back }}</a></div>
-        </div>
-      </form>
-      {{ content_bottom }}</div>
-    {{ column_right }}</div>
+          <div class="formbtn">
+            <button name="submit" type="submit" class="she-btn-black">update</button>
+          </div>
+        </form>
+      </div>
+    </div>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+  </div>
 </div>
 {{ footer }}
